# freebird

./: .dockerignore  .env.example  .env.hsm.example  .gitignore  .npp-md-preview.html  ADMIN_API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_READY.md  DOCKER_QUICKSTART.md  Dockerfile  ENTERPRISE_USE_CASES.md  HOW_IT_WORKS.md  INVITATION_SYSTEM.md  NOTICE  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_START_DEPLOYMENT.md  README.md  SECURITY.md  SECURITY_AUDIT_CONSTANT_TIME.md  SECURITY_REVIEW_2025_12.md  UNIFIED_ADMIN_UI_PLAN.md  USE_CASES.md  docker-compose.yaml  launch.sh
.forgejo/workflows/: docker.yml  release.yml
.github/workflows/: ci.yml  docker-publish.yaml  docker.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-0-stale-reference-audit.txt
.sisyphus/notepads/doc-fixes/: learnings.md
.sisyphus/notepads/production-fixes/: f1_audit.md  f2_cross_reference.md  f2_quality.md  f3_qa.md  f4_scope.md  t11_rate_limit.md
.sisyphus/plans/: doc-fixes.md  production-fixes.md
.well-known/: security.txt
admin-ui/: README.md  index.html
common/: Cargo.toml
common/src/: api.rs  duration.rs  federation.rs  lib.rs  metrics.rs  rate_limit.rs  tls_enforcement.rs
crypto/: Cargo.toml
crypto/benches/: README.md  mac.rs  voprf.rs
crypto/src/: lib.rs
crypto/src/provider/: README.md  mod.rs  pkcs11.rs  software.rs
crypto/src/voprf/: core.rs  dleq.rs  mod.rs
crypto/tests/: voprf_properties.rs
deploy/systemd/: freebird-issuer.service  freebird-verifier.service  issuer.env.example  verifier.env.example
docs/: ADMIN_API.md  AI_CONTRIBUTOR_GUIDE.md  API.md  CONFIGURATION.md  ENTERPRISE_USE_CASES.md  FEDERATED_TRUST.md  FEDERATION.md  HOW_IT_WORKS.md  HSM_HYBRID_MODE.md  INDEX.md  KEY_MANAGEMENT.md  MULTI_PARTY_VOUCHING.md  NIP-98.md  NIP-VOPRF.md  PRODUCTION.md  PROGRESSIVE_TRUST.md  PROOF_OF_DIVERSITY.md  QUICKSTART.md  SDK.md  SECURITY.md  SYBIL_RESISTANCE.md  TROUBLESHOOTING.md  USE_CASES.md  WEBAUTHN.md  admin-operations.md  architecture.md  audit-logging.md  client-proofs.md  deployment-kubernetes.md  deployment-systemd.md  federation.md  production-deployment.md  release.md  sybil-modes.md  threat-model.md  webauthn-browser-flow.md
docs/superpowers/plans/: 2026-03-14-voprf-unblinding-redesign.md
docs/superpowers/specs/: 2026-03-14-voprf-unblinding-redesign.md
integration_tests/: Cargo.toml
integration_tests/tests/: admin_operator_workflows.rs  batch_verification_duplicates.rs  e2e_issuance_verification.rs  endpoint_parity.rs  federation_metadata.rs  key_rotation.rs  memory_double_spend.rs  redis_double_spend.rs  regressions.rs  signature_based_tokens.rs  smoke_voprf_roundtrip.rs  sybil_http_matrix.rs  sybil_mode_matrix.rs  time_epoch_boundaries.rs  token_contract_matrix.rs  v4_private_verification.rs  v5_public_bearer.rs
interface/: Cargo.toml
interface/src/: main.rs
issuer/: Cargo.toml  build.rs
issuer/src/: audit.rs  config.rs  federation_store.rs  keys.rs  ledger.rs  lib.rs  main.rs  multi_key_voprf.rs  public_tokens.rs  startup.rs  voprf_core.rs  webauthn_ctx.rs  webauthn_store.rs
issuer/src/admin_ui/: index.html
issuer/src/ledger/: sidecar.rs
issuer/src/routes/: admin.rs  admin_rate_limit.rs  batch_issue.rs  issue.rs  issue_with_sybil.rs  metadata.rs  mod.rs  public_issue.rs  register.rs  webauthn.rs  webauthn_attestation.rs
issuer/src/sybil_resistance/: federated_trust.rs  invitation.rs  mod.rs  multi_party_vouching.rs  progressive_trust.rs  proof_of_burn.rs  proof_of_diversity.rs  proof_of_work.rs  rate_limit.rs  replay_store.rs  webauthn_gate.rs
issuer/src/webauthn/: attestation.rs  ctx.rs  discoverable.rs  gate.rs  handlers.rs  mod.rs  rate_limit.rs  store.rs
k8s/: ingress.yaml  issuer-deployment.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  redis-deployment.yaml  secrets-template.yaml  verifier-deployment.yaml
monitoring/: LOGGING.md  alert-rules.yml  prometheus-config.yml
scripts/: backup-restore.sh  setup-softhsm-test.sh  validate-deployment.sh  validate-env.sh
sdk/js/: debug-crypto.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/js/examples/: nostr-client.ts  nostr-relay.ts
sdk/js/src/: client.ts  index.ts  types.ts
sdk/js/src/crypto/: p256.ts  vitest.config.ts  voprf.ts
sdk/js/tests/: integration.test.ts
server-configs/: freebird-issuer.conf  freebird-verifier.conf
verifier/: Cargo.toml  build.rs
verifier/src/: federation.rs  lib.rs  main.rs  store.rs  verify.rs
verifier/src/admin_ui/: index.html
verifier/src/routes/: admin.rs  admin_rate_limit.rs  mod.rs
webauthn-client/: index.html
