[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
time = { version = "0.3", features = ["formatting"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64ct = { version = "1.6", features = ["alloc"] }

# Cryptography (for federation signatures)
crypto = { path = "../crypto" }