[package]
name = "freebird-common"
version = "0.1.3"
edition = "2021"
description = "Common utilities and shared types for the Freebird privacy-preserving authentication system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flammafex/freebird"
homepage = "https://github.com/flammafex/freebird"
keywords = ["privacy", "authentication", "federation"]
categories = ["authentication"]

[dev-dependencies]
serial_test = "3"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
time = { version = "0.3", features = ["formatting"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64ct = { version = "1.6", features = ["alloc"] }

# Cryptography (for federation signatures)

freebird-crypto = { version = "0.1.3", path = "../crypto" }

