[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
[[bin]]
 name = "test_hash2curve"
path = "test_hash2curve.rs"
[features]
default = []
voprf-p256 = []
rfc9380 = []         # turn on when you provide a real SSWU_RO map


[dependencies]
# Core curve + math
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
elliptic-curve = { version = "0.13", features = ["hash2curve"] }

# Hashing / randomness
sha2       = "0.10"
rand       = "0.8"
rand_core  = "0.6"

# Helpers
subtle         = "2.5"
hkdf           = "0.12"
base64ct       = { version = "1.8", features = ["alloc"] }
generic-array  = "0.14"
zeroize        = "1"
voprf = "0.5"

[patch.crates-io]
# Enforce a single generic-array version to prevent trait-bound conflicts
generic-array = "0.14.9"
