[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["voprf-p256"]
voprf-p256 = []

[dependencies]
# Core curve + math for P-256 VOPRF implementation
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve", "ecdsa"] }
elliptic-curve = { version = "0.13", features = ["hash2curve"] }

# Hashing / randomness
sha2       = "0.10"
rand       = "0.8"
rand_core  = "0.6"

# Helpers
subtle         = "2.5"
hkdf           = "0.12"
base64ct       = { version = "1.8", features = ["alloc"] }
generic-array  = "0.14"
zeroize        = "1"

[dev-dependencies]
proptest = "1.4"  # <--- Add this line