[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
# HTTP client for tests (blocking mode + JSON). rustls avoids native TLS hassle on Windows.
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities used by the test
base64ct = "1.6"
time = { version = "0.3", features = ["formatting"] }

# Your workspace crypto crate (so we can use Client/Verifier)
crypto = { path = "../crypto" }
