[package]
name = "integration_tests"
version = "0.1.2"
edition = "2021"
publish = false

[dev-dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
base64ct = "1.6"
time = { version = "0.3", features = ["formatting"] }
anyhow = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# Async Runtime (Required for concurrency tests)
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Project Crates
freebird-crypto = { path = "../crypto" }
freebird-common = { path = "../common" }

freebird-verifier = { path = "../verifier" } # <--- Now accessible as a lib
