[package]
name = "integration_tests"
version = "0.5.1"
edition = "2021"
publish = false

[dev-dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
base64ct = "1.6"
time = { version = "0.3", features = ["formatting"] }
anyhow = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

# Async Runtime (Required for concurrency tests)
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = "0.7"
async-trait = "0.1"
tower = "0.5"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }

# Project Crates
freebird-crypto = { path = "../crypto" }
freebird-common = { path = "../common" }
freebird-issuer = { path = "../issuer" }

freebird-verifier = { path = "../verifier" } # <--- Now accessible as a lib
blind-rsa-signatures = "0.17.1"
