[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64ct = { version = "1.8", default-features = false }
crypto = { path = "../crypto", features = ["voprf-p256"] }
common = { path = "../common" } # <--- ADD THIS
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"