[package]
name = "freebird-interface"
version = "0.1.3"
edition = "2021"
description = "Client interface and CLI for the Freebird privacy-preserving authentication system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flammafex/freebird"
homepage = "https://github.com/flammafex/freebird"
keywords = ["privacy", "authentication", "client", "cli"]
categories = ["authentication", "command-line-utilities"]

[dependencies]
anyhow = "1"
base64ct = { version = "1.8", default-features = false }
freebird-crypto = { version = "0.1.3", path = "../crypto", features = ["voprf-p256"] }
freebird-common = { version = "0.1.3", path = "../common" } # <--- ADD THIS
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
