[package]
name = "freebird-issuer"
version = "0.1.3"
edition = "2021"
description = "Token issuer service for the Freebird privacy-preserving authentication system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flammafex/freebird"
homepage = "https://github.com/flammafex/freebird"
keywords = ["privacy", "authentication", "issuer", "tokens"]
categories = ["authentication", "web-programming"]

[[bin]]
name = "freebird-issuer"
path = "src/main.rs"

[[bin]]
name = "freebird-validate-config"
path = "src/bin/validate_config.rs"

[[bin]]
name = "freebird-cli"
path = "src/bin/cli.rs"

[features]
default = []
human-gate-webauthn = [
    "dep:webauthn-rs",
    "dep:url",
    "dep:uuid",
    "dep:chrono",
    "dep:redis",
]

[dependencies]
freebird-common = { version = "0.1.3", path = "../common" }
freebird-crypto = { version = "0.1.3", path = "../crypto", features = ["voprf-p256"] }
axum = "0.7"
rayon = "1.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }  # Added "fs" feature
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64ct = { version = "1.8", default-features = false }
time = "0.3"
anyhow = "1"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
p256 = { version = "0.13", features = ["ecdsa"] }
elliptic-curve = "0.13"
sha2 = "0.10"
blake3 = "1"
hex = "0.4"  # For invitation signature serialization
subtle = "2"  # For constant-time comparisons
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tower_governor = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "timeout", "set-header", "util", "request-id"] }
# WebAuthn dependencies (conditional on feature flag)
webauthn-rs = { version = "0.5.3", optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", optional = true }
async-trait = "0.1"  # For async trait implementations
redis = { version = "0.24", features = ["aio", "tokio-comp"], optional = true }
reqwest = { version = "0.12.24", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
