[package]
name = "freebird-verifier"
version = "0.1.3"
edition = "2021"
description = "Token verification service for the Freebird privacy-preserving authentication system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flammafex/freebird"
homepage = "https://github.com/flammafex/freebird"
keywords = ["privacy", "authentication", "verifier", "tokens"]
categories = ["authentication", "web-programming"]

[dev-dependencies]
serde_json = "1"

[dependencies]
# --- Shared logging helper ---
freebird-common = { version = "0.1.3", path = "../common" }

# --- Protocol / crypto ---
freebird-crypto = { version = "0.1.3", path = "../crypto", features = ["voprf-p256"] }
base64ct = { version = "1.8", default-features = false }

# --- Web / async ---
axum = "0.7"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["timeout", "set-header"] }

# --- Storage / state ---
redis = { version = "0.24", features = ["tokio-comp"] }
async-trait = "0.1.89"
anyhow = "1"

# --- Security / ops ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tower_governor = "0.5"
subtle = "2.5"
hex = "0.4"
rayon = "1.10"
zeroize = "1"
